[workspace]
resolver = "3"
members = ["debug_app", "egui_components", "iced_components"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
eframe = { version = "0.32.0", features = [
    "default",
    "__screenshot"
] }
egui_extras = { version = "0.32.0", features = ["default", "image"] }

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }

dioxus = { version = "0.7.0-alpha.3" }
dioxus-devtools = { version = "0.7.0-alpha.3" }

iced = { version = "0.13.1" }

subsecond = { version = "0.7.0-alpha.3" }
