[workspace]
resolver = "3"
members = [
    "egui_components", "egui_debug_app", 
    "iced_components"
    , "iced_debug_app"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]

debug_app = { path = "debug_app"}
egui_components = { path = "egui_components"}
iced_components = { path = "iced_components"}

eframe = { version = "0.32.0", features = [
    "default",
    "__screenshot"
] }
egui_extras = { version = "0.32.0", features = ["default", "image"] }

env_logger = { version = "0.11.8", default-features = false, features = [
    "auto-color",
    "humantime",
] }

dioxus = { version = "0.7.0-alpha.3" }
dioxus-devtools = { version = "0.7.0-alpha.3" }

iced = { version = "0.13.1" }

subsecond = { version = "0.7.0-alpha.3" }
